packages/components/pagination/style/index.less
@import '../../style/variable/index.less';
@import '../../style/mixins/reset.less';
@import './mixin.less';

.@{pagination-prefix} {
  .reset-component-new();
  .reset-color();

  display: flex;
  align-items: center;
  list-style: none;
  outline: none;
  user-select: none;

  &-sm {
    .pagination-size(var(--ix-pagination-font-size-sm),  var(--ix-pagination-item-padding-sm), var(--ix-pagination-item-content-size-sm));
  }

  &-md {
    .pagination-size(var(--ix-pagination-font-size-md),  var(--ix-pagination-item-padding-md), var(--ix-pagination-item-content-size-md));
  }

  &-lg {
    .pagination-size(var(--ix-pagination-font-size-lg),  var(--ix-pagination-item-padding-lg), var(--ix-pagination-item-content-size-lg));
  }

  &-sm,
  &-md {
    .@{pagination-prefix}-sizes > .@{select-prefix} {
      width: 60px;
    }

    .@{pagination-prefix}-item,
    .@{pagination-prefix}-jumper {
      > .@{input-prefix} {
        width: 40px;
      }
    }
  }

  &-lg {
    .@{pagination-prefix}-sizes > .@{select-prefix} {
      width: 64px;
    }

    .@{pagination-prefix}-item,
    .@{pagination-prefix}-jumper {
      > .@{input-prefix} {
        width: 48px;
      }
    }
  }

  &-item,
  &-total,
  &-sizes,
  &-jumper {
    display: inline-block;
  }

  &-total {
    margin-right: 8px;
    color: var(--ix-color-text-info);
  }
  &-sizes {
    margin-left: 8px;
    color: var(--ix-color-text-info);
  }
  &-jumper {
    margin-left: 8px;
    color: var(--ix-color-text-info);
  }

  &-sizes > .@{select-prefix},
  &-item > .@{input-prefix},
  &-jumper > .@{input-prefix} {
    margin: 0 4px;
  }

  &-item {
    cursor: pointer;
    outline: none;
    line-height: 1;
    transition: color var(--ix-motion-duration-fast);

    &-content {
      display: inline-flex;
      justify-content: center;
      align-items: center;
      border-radius: 50%;

      > .@{icon-prefix},
      .@{pagination-prefix}-item-jumper > .@{icon-prefix} {
        font-size: var(--ix-font-size-icon);
      }
    }

    &-slash {
      margin: 0 4px;
    }

    &-jumper {
      display: inline-flex;

      > .@{icon-prefix} {
        display: none;
      }

      > .@{pagination-prefix}-item-ellipsis {
        display: inline-block;
      }

      &:hover {
        > .@{icon-prefix} {
          display: inline-block;
        }

        > .@{pagination-prefix}-item-ellipsis {
          display: none;
        }
      }
    }

    &:hover:not(&-disabled) {
      color: var(--ix-color-primary-text);
      .@{pagination-prefix}-item-content {
        background-color: var(--ix-color-container-bg-hover);
      }
    }

    &&-active:not(&-disabled) {
      color: var(--ix-color-primary-text);
      .@{pagination-prefix}-item-content {
        background-color: var(--ix-color-container-bg-active);
      }
    }

    &&-disabled {
      cursor: not-allowed;
      color: var(--ix-color-text-disabled);
    }

    &&-active&-disabled &-content {
      background-color: var(--ix-color-container-bg-disabled);
    }

    &:focus-visible {
      .@{pagination-prefix}-item-content {
        outline: 2px solid var(--ix-pagination-outline-color);
        outline-offset: 1px;
      }
    }
  }

  &&-disabled {
    color: var(--ix-color-text-disabled);
  }
}

